turtleart.square.Square.scala.error
Erreur de compilation :
Square:2: error: not found: value baissecrayon
  baissecrayon()
  ^Square:5: error: not enough arguments for method droite: (x$1: Double)Unit.
Unspecified value parameter x$1.
  droite()
        ^