turtleart.square.Square.scala.code
override def run() {
  baissecrayon()
  for (k<- 1 to 4) {
  avance(200:Int)
  droite()
  }
  
}